--- a/css/layout.css
+++ b/css/layout.css
@@ -71,7 +71,7 @@ transition: all .25s ease-in-out;
 /*header*/
 #header {position: sticky; top:0; z-index: 999; background: #f9fafc; height: var(--aside-header-height);}
 .aside-menu {display: flex; align-items: center; height: 100%; padding-left: 40px;}
-.aside-menu button {display: flex; align-items: center; justify-content: center; width: 35px; height: 35px; border-radius: 6px; border: 1px solid #252525;}
+.aside-menu button {color: #252525; display: flex; align-items: center; justify-content: center; width: 35px; height: 35px; border-radius: 6px; border: 1px solid #252525;}
 .header-mypage {position: absolute; top: 50%; transform: translateY(-50%); right: 40px; z-index: 99; }
 .header-mypage .top-btn-mypage {font-size: 24px; color: #a2a2a2; display: flex; align-items: center; justify-content: center; border-radius: 5px; width: 40px; height: 40px;}
 .header-mypage .top-btn-mypage.open,
