--- a/css/rw_style.css
+++ b/css/rw_style.css
@@ -33,6 +33,11 @@
 .search-input dl {width: 100%; margin-bottom: 5px;}
 .search-input dl dt {display: none;}
 .search-input dl + button {margin-top: 10px;}
+
+.demosong-info-wrap .ly-right.flex {position: unset; transform: translate(0,0); margin-top: 10px; }
+.demosong-info-wrap .ly-right .filebox.flex {justify-content: space-between; width: 100%;}
+.filebox .filename {width: calc(100% - 110px);}
+.filebox .filename .upload-name {width: 100%; max-width: 100%;}
 	
 }
 
